--- a/.mythx.yml
+++ b/.mythx.yml
@@ -15,8 +15,9 @@ analyze:
         - contracts/uniswapv2/UniswapV2Factory.sol:UniswapV2Factory
         - contracts/uniswapv2/UniswapV2ERC20.sol:UniswapV2ERC20
         - contracts/uniswapv2/UniswapV2Router02.sol:UniswapV2Router02
+        - contracts/governance/FinaToken.sol:FinaToken
+        - contracts/governance/GovernorAlpha.sol:GovernorAlpha
         - contracts/SushiRoll.sol:SushiRoll
-        - contracts/SushiToken.sol:SushiToken
         - contracts/SushiBar.sol:SushiBar
         - contracts/MasterChef.sol:MasterChef
         - contracts/Migrator.sol:Migrator
