--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "@sushiswap/core",
-  "version": "1.4.2",
+  "name": "@finaswap/core",
+  "version": "1.0.0",
   "license": "MIT",
   "types": "./types/index.ts",
-  "description": "Core contracts for the SushiSwap protocol",
+  "description": "Core contracts for the FinaSwap protocol",
   "files": [
     "abi",
     "artifacts",
@@ -15,14 +15,14 @@
   "author": "",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/sushiswap/sushiswap.git"
+    "url": "git+https://github.com/finaswap/finaswap.git"
   },
   "bugs": {
-    "url": "https://github.com/sushiswap/sushiswap/issues"
+    "url": "https://github.com/finaswap/finaswap/issues"
   },
-  "homepage": "https://github.com/sushiswap/sushiswap#readme",
+  "homepage": "https://github.com/finaswap/finaswap#readme",
   "keywords": [
-    "sushiswap",
+    "finaswap",
     "ethereum"
   ],
   "scripts": {
@@ -63,7 +63,7 @@
     "@nomiclabs/hardhat-solhint": "^2.0.0",
     "@nomiclabs/hardhat-waffle": "^2.0.0",
     "@openzeppelin/contracts": "^3.1.0",
-    "@sushiswap/sdk": "^4.1.1",
+    "@finaswap/sdk": "^1.0.0",
     "@tenderly/hardhat-tenderly": "^1.0.0",
     "@typechain/ethers-v5": "^5.0.0",
     "@types/mocha": "^8.2.1",
