--- a/.mythx.yml
+++ b/.mythx.yml
@@ -17,7 +17,7 @@ analyze:
         - contracts/uniswapv2/UniswapV2Router02.sol:UniswapV2Router02
         - contracts/governance/FinaToken.sol:FinaToken
         - contracts/governance/GovernorAlpha.sol:GovernorAlpha
-        - contracts/SushiRoll.sol:SushiRoll
+        - contracts/FinaMove.sol:FinaMove
         - contracts/SushiBar.sol:SushiBar
         - contracts/FinaMaster.sol:FinaMaster
         - contracts/Migrator.sol:Migrator
