Add sdk dependency

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "build": "hardhat compile",
     "console": "hardhat console",
     "testnet:deploy": "yarn ropsten:deploy && yarn rinkeby:deploy && yarn goerli:deploy && yarn kovan:deploy && yarn moonbase:deploy && yarn arbitrum:deploy",
+	"bsc-testnet:deploy": "hardhat --network bsc-testnet deploy",
     "mainnet:deploy": "hardhat --network mainnet deploy",
     "mainnet:verify": "hardhat --network mainnet etherscan-verify --solc-input",
     "mainnet:export": "hardhat --network mainnet export --export exports/mainnet.json",
@@ -67,6 +68,7 @@
     "@typechain/ethers-v5": "^5.0.0",
     "@types/mocha": "^8.2.1",
     "@types/node": "^14.14.31",
+	"@finaswap/sdk": "^1.0.0",
     "@uniswap/v2-core": "git://github.com/uniswap/uniswap-v2-core.git#27f6354bae6685612c182c3bc7577e61bc8717e3",
     "chai": "^4.2.0",
     "cross-env": "^7.0.0",
